# CppDogDisplay

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CmakeLists.txt  Dockerfile  README.md  SHOWCASE_BUILD.md  Starwhisper.txt  THIRD_PARTY_LICENSES  build_script.ps1  build_script.sh  conanfile.py  version_ref_consistency_tests.py
.github/workflows/: main.yml
include/: CprHttpClient.h  DogBreedService.h  IDogBreedService.h  IHttpClient.h  ServerSetup.h  SignatureService.h
showcase_scripts/: test_server_endpoints.py  ubuntu-showcase.yml  windows-showcase.yml
src/: CMakeLists.txt  DogBreedService.cpp  ServerSetup.cpp  SignatureService.cpp  main.cpp  sign.py
templates/: breeds_template.html  initial_template.html
tests/: CmakeLists.txt  DogBreedServiceTests.cpp  EndToEndTests.cpp  MockDogBreedService.h  MockHttpClient.h  RoutesTests.cpp
